next lesson start

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -2,6 +2,8 @@
   --bg-color: #e8e8ea;
   --inverted-bg-color: #090949;
 
-  --primary-color: #0350c2;
-  --secondary-color: #125de7;
+  --primary-color: #0b0ed8;
+  --secondary-color: #016cde;
+  --inverted-primary-color: #2ac30b;
+  --inverted-secondary-color: #04c304;
 }
