--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,6 +2,8 @@
     --bg-color: #090949;
     --inverted-bg-color: #e8e8ea;
 
-    --primary-color: #049604;
-    --secondary-color: #04ff04;
+    --primary-color: #2ac30b;
+    --secondary-color: #04c304;
+    --inverted-primary-color: #0b0ed8;
+    --inverted-secondary-color: #016cde;
 }
