--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -11,10 +11,11 @@
   width: var(--sidebar-width-collapsed);
 }
 
-.switchers{
+.switchers {
   position: absolute;
   bottom: 20px;
   display: flex;
   justify-content: center;
+  gap: 20px;
   width: 100%;
 }
