lesson 26, add storybook(with bag), add loki

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,7 +2,7 @@
   --bg-color: #090949;
   --inverted-bg-color: #e8e8ea;
 
-  --primary-color: #2ac30b;
+  --primary-color: #23c902;
   --secondary-color: #04c304;
   --inverted-primary-color: #0b0ed8;
   --inverted-secondary-color: #016cde;
