--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,8 +2,8 @@
   --bg-color: #090949;
   --inverted-bg-color: #e8e8ea;
 
-  --primary-color: #23c902;
-  --secondary-color: #04c304;
-  --inverted-primary-color: #0b0ed8;
-  --inverted-secondary-color: #016cde;
+  --primary-color: #00ca22;
+  --secondary-color: #23c902;
+  --inverted-primary-color: #016cde;
+  --inverted-secondary-color: #0b0ed8;
 }
