--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -4,16 +4,27 @@
   padding: 6px 15px;
 }
 
-.clear {
+.clear,
+.clerInverted {
   padding: 0;
   border: none;
   background: none;
   outline: none;
 }
 
+.clerInverted {
+  color: var(--inverted-primary-color);
+}
+
 .outline {
   border: 1px solid var(--primary-color);
   color: var(--primary-color);
+  background: none;
+}
+
+.outlineInverted {
+  border: 1px solid var(--inverted-primary-color);
+  color: var(--inverted-primary-color);
   background: none;
 }
 
