make login form, make text ui component

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -2,8 +2,8 @@
   --bg-color: #e8e8ea;
   --inverted-bg-color: #020252;
 
-  --primary-color: #016cde;
-  --secondary-color: #0b0ed8;
+  --primary-color: #051eff;
+  --secondary-color: #0003b1;
   --inverted-primary-color: #00ca22;
   --inverted-secondary-color: #2ac30b;
 }
