add async reducers, made loginform async, created dynemicloader, fix navbar

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,8 +2,8 @@
   --bg-color: #090949;
   --inverted-bg-color: #e8e8ea;
 
-  --primary-color: #1add00;
-  --secondary-color: #1ca700;
+  --primary-color: #2ac715;
+  --secondary-color: #188b01;
   --inverted-primary-color: #016cde;
   --inverted-secondary-color: #0b0ed8;
 }
