--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -16,6 +16,10 @@
   width: 100%;
 }
 
+.langSwitcher {
+  color: var(--inverted-primary-color);
+}
+
 .collapsedBtn {
   position: absolute;
   right: -32px;
