--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -22,6 +22,6 @@ body {
   flex-grow: 1;
   height: calc(100vh - var(--navbar-height));
   padding: 20px 20px 20px 40px;
-  width: 100%;
+  flex-shrink: 100;
   overflow-y: auto;
 }
