--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,3 +1,11 @@
-.ArticleList {
+.BIG {
+  .card {
+    margin-bottom: 30px;
+  }
+}
 
+.SMALL {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
