--- a/src/app/styles/themes/brown.scss
+++ b/src/app/styles/themes/brown.scss
@@ -3,7 +3,7 @@
   --inverted-bg-color: #687c46;
 
   --primary-color: #7c8d5f;
-  --secondary-color: #736b4e;
+  --secondary-color: #5a5338;
   --inverted-primary-color: #edb047;
   --inverted-secondary-color: #736b4e;
 
