--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,8 +2,8 @@
   --bg-color: #020270;
   --inverted-bg-color: #e8e8ea;
 
-  --primary-color: #2ace15;
-  --secondary-color: #10bf16;
+  --primary-color: #2dd616;
+  --secondary-color: #039408;
   --inverted-primary-color: #0060c0;
   --inverted-secondary-color: #060ad7;
 
