--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -3,7 +3,7 @@
   --inverted-bg-color: #020252;
 
   --primary-color: #0015ce;
-  --secondary-color: #030ede;
+  --secondary-color: #030cac;
   --inverted-primary-color: #00ca22;
   --inverted-secondary-color: #2ac30b;
 
