--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -24,7 +24,13 @@
   --sidebar-width-collapsed: 80px;
 
   //z-index
-  --modal-z-index: 10;
+  --zindex-dropdown: 1000;
+  --zindex-sticky: 1020;
+  --zindex-fixed: 1030;
+  --zindex-modal-backdrop: 1040;
+  --zindex-modal: 1050;
+  --zindex-popover: 1060;
+  --zindex-tooltip: 1070;
 
   //colors
   --overlay-color: rgba(0 0 0 / 60%);
