--- a/src/shared/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ListBox.module.scss
@@ -13,7 +13,7 @@
 .options {
   background: var(--listbox-bg);
   position: absolute;
-  z-index: 10000;
+  z-index: var(--zindex-dropdown);
   border-radius: 12px;
   box-shadow: 4px 4px 8px var(--listbox-bg);
 }
