--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -36,7 +36,7 @@
 .opened {
   opacity: 1;
   pointer-events: auto;
-  z-index: var(--modal-z-index);
+  z-index: var(--zindex-modal);
 
   .content {
     transform: scale(1);
