--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -4,12 +4,6 @@
     margin-right: 8px;
   }
 
-  .header {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-
   .date {
     margin-left: auto;
   }
@@ -22,11 +16,6 @@
     width: 100%;
     max-height: 250px;
     object-fit: cover;
-  }
-
-  .footer {
-    display: flex;
-    align-items: center;
   }
 
   .textBlock {
@@ -50,7 +39,7 @@
     width: 200px;
     height: 200px;
     object-fit: cover;
-    margin: 16px 0;
+    margin: 20px 0 0;
   }
 
   .date {
@@ -70,12 +59,6 @@
     }
   }
 
-  .infoWrapper {
-    display: flex;
-    align-items: center;
-    margin-top: 16px;
-  }
-
   .types p {
     width: 115px;
     white-space: nowrap;
@@ -86,10 +69,6 @@
   .views {
     margin-left: auto;
     margin-right: 8px;
-  }
-
-  .title {
-    margin-top: 8px;
   }
 
   .title p {
